; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_gdb.c_close_connection.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_gdb.c_close_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gdb_lock = common dso_local global i32 0, align 4
@write_event = common dso_local global i32* null, align 8
@read_event = common dso_local global i32* null, align 8
@cur_comm = common dso_local global i32 0, align 4
@cur_resp = common dso_local global i32 0, align 4
@cur_fd = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @close_connection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_connection() #0 {
  %1 = call i32 @pthread_mutex_lock(i32* @gdb_lock)
  %2 = load i32*, i32** @write_event, align 8
  %3 = call i32 @mevent_delete(i32* %2)
  %4 = load i32*, i32** @read_event, align 8
  %5 = call i32 @mevent_delete_close(i32* %4)
  store i32* null, i32** @write_event, align 8
  store i32* null, i32** @read_event, align 8
  %6 = call i32 @io_buffer_reset(i32* @cur_comm)
  %7 = call i32 @io_buffer_reset(i32* @cur_resp)
  store i32 -1, i32* @cur_fd, align 4
  %8 = call i32 (...) @gdb_resume_vcpus()
  %9 = call i32 @pthread_mutex_unlock(i32* @gdb_lock)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @mevent_delete(i32*) #1

declare dso_local i32 @mevent_delete_close(i32*) #1

declare dso_local i32 @io_buffer_reset(i32*) #1

declare dso_local i32 @gdb_resume_vcpus(...) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
